uptake jakarta dependencies (#8)
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>